SonarQube issues addressed.